# orijen-py

./: CHANGELOG.md  README.md  pyproject.toml
orijenpy/: __init__.py  cert.py  certificate.py  cred.py  exception.py  group.py  helper.py  namespace_role.py  notes.md  ns.py  registration.py  resources.py  role.py  session.py  site.py  tenant.py  test.py  user.py  xc.py  xcsession.py.old
src/: setup.py
src/orijen-py/: xc_session.py
tests/: test_common.py  test_cred.py  test_group.py  test_namespace_role.py  test_ns.py
