# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/

[build-system]
# PEP 518 https://www.python.org/dev/peps/pep-0518/
# https://discuss.python.org/t/help-testing-experimental-features-in-setuptools/13821
requires = [
  "setuptools>=64",
  "wheel",               # for bdist package distribution
  "setuptools_scm>=6.4", # for automated versioning
]

# PEP 517 https://peps.python.org/pep-0517/
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
# include = []
# exclude = ["tests"]
namespaces = true

[tool.setuptools_scm]
write_to = "src/orijen-py/_version.py"

# PEP 621 https://peps.python.org/pep-0621/
[project]
name = "orijen-py"
# version = "0.0.1"
# for automated versioning by pypa/setuptools_scm. see https://peps.python.org/pep-0621/#dynamic
dynamic = ["version"]
description = "package used for project orijen tooling"
authors = [{ name = "kreynoldsf5" }, { email = "k.reynolds@f5.com" }]
maintainers = [{ name = "kreynoldsf5" }, { email = "k.reynolds@f5.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]
keywords = ["package", "setuptools"]
dependencies = ["requests", "tenacity"]
[project.optional-dependencies]
dev = ["pytest==5.0.0", "pytest-cov[all]", "mypy==0.910", "black==21.10b0"]
[project.urls]
Homepage = "https://github.com/kreynoldsf5/orijen-py"
documentation = "https://github.com/kreynoldsf5/orijen-py"
repository = "https://github.com/kreynoldsf5/orijen-py"
changelog = "https://github.com/kreynoldsf5/orijen-py/blob/main/CHANGELOG.md"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.mypy]
python_version = "3.9"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true