[tool.poetry]
name = "orijen-py"
version = "0.1.0"
description = ""
authors = ["Kevin Reynolds <kevin@k11s.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
