[tool.poetry]
name = "orijenpy"
version = "0.1.0"
description = "base package and module for project orijen used for F5XC tenant automation"
authors = ["Kevin Reynolds <k.reynolds@f5.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uplink = "^0.9.7"
requests = "^2.31.0"
datetime = "^5.4"
pytest = "^8.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
